codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__shortcut_overlay_ctrl_j.snap
---
source: tui/src/bottom_pane/footer.rs
expression: output
---
  / for commands                          ctrl + j for newline
  @ for file paths                        ctrl + v to paste images
  esc esc to edit previous message        ctrl + c to exit
                                          ctrl + t to view transcript
