codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__shortcut_summary.snap
---
source: tui/src/bottom_pane/footer.rs
expression: output
---
  65% context left · ? for shortcuts
